Source/JavaScriptCore/dfg/DFGCSEPhase.cpp
@@ -256,9 +256,11 @@ private:
                 break;
             } 
             case PutClosureVar: {
-                if (node->child2() == registers && node->varNumber() == varNumber)
+                if (node->varNumber() != varNumber)
+                    break;
+                if (node->child2() == registers)
                     return node->child3().node();
-                break;
+                return 0;
             }
             case SetLocal: {
                 VariableAccessData* variableAccessData = node->variableAccessData();
@@ -340,9 +342,11 @@ private:
             Node* node = m_currentBlock->at(i);
             switch (node->op()) {
             case PutClosureVar: {
-                if (node->child1() == scope && node->child2() == registers && node->varNumber() == varNumber)
+                if (node->varNumber() != varNumber)
+                    break;
+                if (node->child1() == scope && node->child2() == registers)
                     return node;
-                break;
+                return 0;
             }
                 
             case GetClosureVar: {
